--- a/servicios.html
+++ b/servicios.html
@@ -66,64 +66,33 @@
                 <div class="services__grid">
                     <div class="service-card">
                         <div class="service-card__icon">
-                            <i class="ri-printer-line"></i>
+                            <i class="ri-route-line"></i>
                         </div>
-                        <h3 class="service-card__title">Impresión Gran Formato</h3>
-                        <p class="service-card__description">Impresión de alta calidad en lonas, viniles, microperforado y materiales especiales para publicidad exterior e interior.</p>
-                        <ul class="service-card__features">
-                            <li>Lonas publicitarias</li>
-                            <li>Viniles adhesivos</li>
-                            <li>Microperforado</li>
-                            <li>Backlit</li>
-                            <li>Mesh</li>
+                        <h3 class="service-card__title">Señalética y rotulación especial</h3>
+                        <ul class="service-card__features icon-list">
+                            <li><i class="ri-check-line"></i><span>PVC</span></li>
+                            <li><i class="ri-check-line"></i><span>Letreros en Neón Flex</span></li>
+                            <li><i class="ri-check-line"></i><span>Letras corpóreas</span></li>
+                            <li><i class="ri-check-line"></i><span>Roller up</span></li>
+                            <li><i class="ri-check-line"></i><span>Gafetes en PVC</span></li>
                         </ul>
                         <a href="contacto.html" class="service-card__link">Cotizar <i class="ri-arrow-right-line"></i></a>
                     </div>
 
                     <div class="service-card">
                         <div class="service-card__icon">
-                            <i class="ri-layout-4-line"></i>
+                            <i class="ri-file-list-2-line"></i>
                         </div>
-                        <h3 class="service-card__title">Estructuras Publicitarias</h3>
-                        <p class="service-card__description">Diseño y fabricación de estructuras publicitarias resistentes y funcionales para eventos y publicidad exterior.</p>
-                        <ul class="service-card__features">
-                            <li>Plumas publicitarias</li>
-                            <li>Roller up</li>
-                            <li>Arañas publicitarias</li>
-                            <li>Stands publicitarios</li>
-                            <li>Estructuras personalizadas</li>
-                        </ul>
-                        <a href="contacto.html" class="service-card__link">Cotizar <i class="ri-arrow-right-line"></i></a>
-                    </div>
-
-                    <div class="service-card">
-                        <div class="service-card__icon">
-                            <i class="ri-scissors-cut-line"></i>
-                        </div>
-                        <h3 class="service-card__title">Rotulación y Corte</h3>
-                        <p class="service-card__description">Servicios de corte láser, rotulación vehicular y aplicación de viniles en diferentes superficies.</p>
-                        <ul class="service-card__features">
-                            <li>Rotulación vehicular</li>
-                            <li>Corte láser</li>
-                            <li>Viniles adhesivos</li>
-                            <li>Señalética</li>
-                            <li>Letras corpóreas</li>
-                        </ul>
-                        <a href="contacto.html" class="service-card__link">Cotizar <i class="ri-arrow-right-line"></i></a>
-                    </div>
-
-                    <div class="service-card">
-                        <div class="service-card__icon">
-                            <i class="ri-palette-line"></i>
-                        </div>
-                        <h3 class="service-card__title">Diseño Gráfico</h3>
-                        <p class="service-card__description">Creación de identidad visual, branding y diseño de material publicitario personalizado para tu marca.</p>
-                        <ul class="service-card__features">
-                            <li>Identidad corporativa</li>
-                            <li>Diseño de logotipos</li>
-                            <li>Material publicitario</li>
-                            <li>Branding</li>
-                            <li>Diseño web</li>
+                        <h3 class="service-card__title">Materiales impresos y de oficina</h3>
+                        <ul class="service-card__features icon-list">
+                            <li><i class="ri-check-line"></i><span>Stiker (cualquier tamaño)</span></li>
+                            <li><i class="ri-check-line"></i><span>Recibos</span></li>
+                            <li><i class="ri-check-line"></i><span>Talonarios o facturas</span></li>
+                            <li><i class="ri-check-line"></i><span>Volantes</span></li>
+                            <li><i class="ri-check-line"></i><span>Tarjetas de presentación</span></li>
+                            <li><i class="ri-check-line"></i><span>Sellos automáticos</span></li>
+                            <li><i class="ri-check-line"></i><span>Sellos en madera</span></li>
+                            <li><i class="ri-check-line"></i><span>Sello de agua</span></li>
                         </ul>
                         <a href="contacto.html" class="service-card__link">Cotizar <i class="ri-arrow-right-line"></i></a>
                     </div>
