--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VEFOD Media & Diseño - Presentación de la Empresa</title>
-    <meta name="description" content="Conoce VEFOD Media & Diseño, empresa líder en impresión, rotulación y estructuras publicitarias en Costa Rica.">
+    <title>VEFOD Media & Diseño</title>
+    <meta name="description" content="Conoce VEFOD Media & Diseño, empresa especializada en impresión, rotulación y estructuras publicitarias en Costa Rica.">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Remixicon para iconos -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
