--- a/servicios.html
+++ b/servicios.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios - VEFOD Media & Diseño</title>
     <meta name="description" content="Conoce todos nuestros servicios de impresión, rotulación, estructuras publicitarias y diseño gráfico en VEFOD Media & Diseño.">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/vefod_ico.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/vefod_ico.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/vefod_ico.jpg">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Remixicon para iconos -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -71,7 +76,7 @@
                         <h3 class="service-card__title">Señalética y rotulación especial</h3>
                         <ul class="service-card__features icon-list">
                             <li><i class="ri-check-line"></i><span>PVC</span></li>
-                            <li><i class="ri-check-line"></i><span>Letreros en Neón Flex</span></li>
+                            <li><i class="ri-check-line"></i><span>Letreros</span></li>
                             <li><i class="ri-check-line"></i><span>Letras corpóreas</span></li>
                             <li><i class="ri-check-line"></i><span>Roller up</span></li>
                             <li><i class="ri-check-line"></i><span>Gafetes en PVC</span></li>
