--- a/productos.html
+++ b/productos.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - VEFOD Media & Diseño</title>
     <meta name="description" content="Catálogo completo de productos de VEFOD Media & Diseño: plumas publicitarias, roller up, arañas publicitarias, viniles y más.">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/vefod_ico.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/vefod_ico.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/vefod_ico.jpg">
     <link rel="stylesheet" href="css/styles.css">
     <!-- Remixicon para iconos -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
