--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>VEFOD Media & Diseño</title>
     <meta name="description" content="Conoce VEFOD Media & Diseño, empresa especializada en impresión, rotulación y estructuras publicitarias en Costa Rica.">
     <!-- Favicon -->
